profilelist1exp/unpackaged/objects/Sales_Coach_Activity__c.object
<CustomObject>
    <description>Sales Coach Activity used to display details for Sales Coach in Opportunity</description>
    <fields>
        <fullName>Activity_Details__c</fullName>
        <label>Activity Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ordering_Number__c</fullName>
        <label>Ordering Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Coach_Setup__c</fullName>
        <label>Sales Coach Setup</label>
        <referenceTo>Sales_Coach_Setup__c</referenceTo>
        <relationshipLabel>Sales Coach Activities</relationshipLabel>
        <relationshipName>Sales_Coach_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sales Coach Activity</label>
    <nameField>
        <displayFormat>SCAN-{000000}</displayFormat>
        <label>Sales Coach Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Coach Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>